--- a/ClearPir.ini
+++ b/ClearPir.ini
@@ -69,7 +69,7 @@ Name4=Aspired-Thunderbolt
 ActOfAttacker=903
 ClientRepresent=1
 IntoneDuration=500
-SortOfAct1
+SortOfAct=1
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 Desc=Upgrade~after~Level~90
@@ -290,7 +290,7 @@ Name3=EchoSword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct14
+SortOfAct=14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -410,7 +410,7 @@ TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=1
 Desc=Fixed
-DescEx=¿ÉÒÔÇå³ý¶Ô·½ÉíÉÏµÄ²»Á¼×´Ì¬
+DescEx=        Է    ϵĲ   ״̬
 Role3DEffectOfTarget=dispel
 SoundOfTarget=sound\Health.wav
 
@@ -425,7 +425,7 @@ TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=1
 Desc=Fixed
-DescEx=¿ÉÒÔÇå³ý¶Ô·½ÉíÉÏµÄËùÓÐ×´Ì¬
+DescEx=        Է    ϵ     ״̬
 Role3DEffectOfTarget=dispel
 SoundOfTarget=sound\Health.wav
 
@@ -470,7 +470,7 @@ TraceEffectTargetYOffset=100
 TargetType=2
 Xp=1
 Desc=Fixed
-DescEx=¿É³ÖÐø60Ãë²»±»¹ÖÎïÖ÷¶¯¹¥»÷
+DescEx= ɳ   60 벻              
 Role3DEffectOfTarget=SuperXp
 SoundOfTarget=sound\Health.wav
 
@@ -715,7 +715,7 @@ Name=FireRing
 ActOfAttacker=903
 ClientRepresent=2
 IntoneDuration=1500
-SortOfAct1
+SortOfAct=1
 TraceEffectOriginYOffset=80
 TraceEffectTargetYOffset=80
 Desc=Upgrade~after~lvl~55
@@ -770,7 +770,7 @@ Name=Bomb
 ActOfAttacker=903
 ClientRepresent=2
 IntoneDuration=2000
-SortOfAct1
+SortOfAct=1
 TraceEffectOriginYOffset=80
 TraceEffectTargetYOffset=80
 Desc=Upgrade~after~lvl~82
@@ -1025,7 +1025,7 @@ TraceEffectOriginYOffset=50
 TraceEffectTargetYOffset=50
 Xp=2
 Desc=Fixed
-DescEx=°ëÔÂ
+DescEx=    
 IntoneEffect=Intone-1
 Role3DEffectOfTarget=Thunder
 SoundOfTarget=sound\thunder.wav
@@ -1040,7 +1040,7 @@ TraceEffectOriginYOffset=50
 TraceEffectTargetYOffset=50
 Xp=2
 Desc=Fixed
-DescEx=°ëÔÂ
+DescEx=    
 IntoneEffect=Intone-1
 Role3DEffectOfTarget=Thunder
 SoundOfTarget=sound\thunder.wav
@@ -2863,7 +2863,7 @@ SortOfAct25
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 Desc=Fixed
-DescEx=ÌæÉí¼¼ÄÜ
+DescEx=       
 Role3DEffectOfTarget=getxp2
 SoundOfTarget=sound\Health.wav
 
@@ -3055,7 +3055,7 @@ TraceEffectTargetYOffset=20
 TargetType=8
 Xp=2
 Desc=Upgradable~after~Level~15.
-DescEx=Passive~Skill.~Equip~a~wand~to~cast.~Has~a~20%~chance~of~attacking~all~targets~within~2~spaces,~causing~110%~damage.
+DescEx=Passive~Skill.~Equip~a~wand~to~cast.~Has~a~20%~chance~of~attacking~all~targets~within~8~spaces,~causing~110%~damage.
 IntoneEffect=bomb4
 Role3DEffectOfAttaker=none
 Role3DEffectOfTarget=snow-blowout
@@ -3316,7 +3316,7 @@ Role3DEffectOfTarget=yfly_atk9
 Name=Boom
 ActOfAttacker=401
 ClientRepresent=1
-SortOfAct16
+SortOfAct=16
 Status=11
 TraceEffectDelay=4
 TraceEffectOriginYOffset=10
@@ -4914,61 +4914,61 @@ TerrainEffect=twfx_atk
 Xp=2
 SoundOfTarget=sound\skill_twfx.wav
 Desc=Upgradable~at~level~15
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~55%~chance~to~cause~110%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~40%~chance~to~cause~110%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [703001]
 TraceEffectOriginYOffset=11
 TraceEffectTargetYOffset=11
 Desc=Upgradable~at~level~30
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~58%~chance~to~cause~115%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~42%~chance~to~cause~115%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [703002]
 TraceEffectOriginYOffset=12
 TraceEffectTargetYOffset=12
 Desc=Upgradable~at~level~45
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~60%~chance~to~cause~120%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~44%~chance~to~cause~120%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [703003]
 TraceEffectOriginYOffset=13
 TraceEffectTargetYOffset=13
 Desc=Upgradable~at~level~60
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~62%~chance~to~cause~125%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~46%~chance~to~cause~125%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [703004]
 TraceEffectOriginYOffset=14
 TraceEffectTargetYOffset=14
 Desc=Upgradable~at~level~70
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~65%~chance~to~cause~130%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~48%~chance~to~cause~130%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [703005]
 TraceEffectOriginYOffset=15
 TraceEffectTargetYOffset=15
 Desc=Upgradable~at~level~80
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~68%~chance~to~cause~135%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~50%~chance~to~cause~135%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [703006]
 TraceEffectOriginYOffset=16
 TraceEffectTargetYOffset=16
 Desc=Upgradable~at~level~90
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~70%~chance~to~cause~140%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~52%~chance~to~cause~140%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [703007]
 TraceEffectOriginYOffset=17
 TraceEffectTargetYOffset=17
 Desc=Upgradable~at~level~90
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~72%~chance~to~cause~145%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~54%~chance~to~cause~145%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [703008]
 TraceEffectOriginYOffset=18
 TraceEffectTargetYOffset=18
 Desc=Upgradable~at~level~110
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~75%~chance~to~cause~150%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~56%~chance~to~cause~150%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [703009]
 TraceEffectOriginYOffset=19
 TraceEffectTargetYOffset=19
 Desc=Highest~level~reached
-DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~80%~chance~to~cause~155%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters).
+DescEx=Passive~skill.~Must~have~a~scepter~equipped.~Grants~you~a~58%~chance~to~cause~155%~damage~to~all~targets~within~7~paces~and~increase~speed~by~20%~in~10~seconds~(500%~damage~to~monsters)(only attack speed is effective on Ape Mount and Origin Servers).
 
 [704000]
 Name=Roamer
@@ -11692,7 +11692,7 @@ Name3=FatalWave
 Name4=Aspired-PlumeArrow
 ActOfAttacker=928
 ClientRepresent=3
-SortOfAct=61
+SortOfAct61
 Status=-1
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=25
@@ -11731,7 +11731,7 @@ ActOfTarget=310
 ActOfAttacker=928
 ClientRepresent=3
 TargetType=4
-SortOfAct=93
+SortOfAct93
 Role3DEffectOfTarget=Rab_Est_acc
 TraceEffect=Rab_Est_att
 TraceEffect1=Rab_Est_att_coat01
@@ -11750,7 +11750,7 @@ ActOfTarget=310
 ActOfAttacker=928
 ClientRepresent=3
 TargetType=4
-SortOfAct=93
+SortOfAct93
 Role3DEffectOfTarget=Rab_Est_acc
 TraceEffect=Rab_Est_att
 TraceEffect1=Rab_Est_att_coat01
@@ -11769,7 +11769,7 @@ ActOfTarget=310
 ActOfAttacker=928
 ClientRepresent=3
 TargetType=4
-SortOfAct=93
+SortOfAct93
 Role3DEffectOfTarget=Rab_Est_acc
 TraceEffect=Rab_Est_att
 TraceEffect1=Rab_Est_att_coat01
@@ -11788,7 +11788,7 @@ ActOfTarget=310
 ActOfAttacker=928
 ClientRepresent=3
 TargetType=4
-SortOfAct=93
+SortOfAct93
 Role3DEffectOfTarget=Rab_Est_acc
 TraceEffect=Rab_Est_att
 TraceEffect1=Rab_Est_att_coat01
@@ -11807,7 +11807,7 @@ ActOfTarget=310
 ActOfAttacker=928
 ClientRepresent=3
 TargetType=4
-SortOfAct=93
+SortOfAct93
 Role3DEffectOfTarget=Rab_Est_acc
 TraceEffect=Rab_Est_att
 TraceEffect1=Rab_Est_att_coat01
@@ -11944,7 +11944,7 @@ Name3=DeathBomb
 ActOfAttacker=927
 ClientRepresent=3
 EarthQuakeTimes=1
-SortOfAct=60
+SortOfAct60
 Status=145
 TraceEffectAcceleration=20
 TraceEffectDelay=250
@@ -12306,7 +12306,7 @@ Role3DEffectOfTarget=thunder1-5-Boos
 SoundOfTarget=sound\magic011.wav
 
 [1121800]
-Name=»ú¹ØÂÖÄ§
+Name=      ħ
 ActOfAttacker=903
 CanBeUsedInMarket=1
 ClientRepresent=1
@@ -12315,13 +12315,13 @@ TraceEffectAcceleration=60
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=2
-Desc=²»¿É¼ÌÐøÉý¼¶
-DescEx=¿ÉÒÔ±äÉí³ÉÕÂÓãº£µÁ
+Desc=   ɼ       
+DescEx=   Ա       㺣  
 IntoneEffect=Disapear13
 SoundOfTarget=sound\Health.wav
 
 [1121900]
-Name=»ú¹ØÊ¯Ä§
+Name=    ʯħ
 ActOfAttacker=903
 CanBeUsedInMarket=1
 ClientRepresent=1
@@ -12330,13 +12330,13 @@ TraceEffectAcceleration=60
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=2
-Desc=²»¿É¼ÌÐøÉý¼¶
-DescEx=¿ÉÒÔ±äÉí³ÉÕÂÓãº£µÁ
+Desc=   ɼ       
+DescEx=   Ա       㺣  
 IntoneEffect=Disapear13
 SoundOfTarget=sound\Health.wav
 
 [1122000]
-Name=»ú¹Øµ¶Ä§
+Name=   ص ħ
 ActOfAttacker=903
 CanBeUsedInMarket=1
 ClientRepresent=1
@@ -12345,13 +12345,13 @@ TraceEffectAcceleration=60
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=2
-Desc=²»¿É¼ÌÐøÉý¼¶
-DescEx=¿ÉÒÔ±äÉí³ÉÕÂÓãº£µÁ
+Desc=   ɼ       
+DescEx=   Ա       㺣  
 IntoneEffect=Disapear13
 SoundOfTarget=sound\Health.wav
 
 [1122100]
-Name=»ú¹Ø¸«Ä§
+Name=   ظ ħ
 ActOfAttacker=903
 CanBeUsedInMarket=1
 ClientRepresent=1
@@ -12360,8 +12360,8 @@ TraceEffectAcceleration=60
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=2
-Desc=²»¿É¼ÌÐøÉý¼¶
-DescEx=¿ÉÒÔ±äÉí³ÉÕÂÓãº£µÁ
+Desc=   ɼ       
+DescEx=   Ա       㺣  
 IntoneEffect=Disapear13
 SoundOfTarget=sound\Health.wav
 
@@ -14042,11 +14042,11 @@ Desc=Upgradable~at~Level~70
 DescEx=Equip~2~Katanas~or~Ninja`s~Epic~Weapons~to~cast.~Effective~Attack~Range:~5~paces.~Double~hits~single~target~within~3~spaces~and~inflicts~117%~of~normal~damage,~while~it~drops~to~88%~if~the~target~is~beyond~3~paces.~Cost:~15~Stamina.
 
 [1208002]
-Desc=100¼¶ÒÔÉÏ¿ÉÉý¼¶
+Desc=100     Ͽ     
 DescEx=Equip~2~Katanas~or~Ninja`s~Epic~Weapons~to~cast.~Effective~Attack~Range:~5~paces.~Double~hits~single~target~within~3~spaces~and~inflicts~122%~of~normal~damage,~while~it~drops~to~90%~if~the~target~is~beyond~3~paces.~Cost:~15~Stamina.
 
 [1208003]
-Desc=120¼¶ÒÔÉÏ¿ÉÉý¼¶
+Desc=120     Ͽ     
 DescEx=Equip~2~Katanas~or~Ninja`s~Epic~Weapons~to~cast.~Effective~Attack~Range:~5~paces.~Double~hits~single~target~within~3~spaces~and~inflicts~127%~of~normal~damage,~while~it~drops~to~92%~if~the~target~is~beyond~3~paces.~Cost:~15~Stamina.
 
 [1208004]
@@ -18662,7 +18662,7 @@ Name2=LightDance
 Name3=FatalWave
 ActOfAttacker=928
 ClientRepresent=3
-SortOfAct=61
+SortOfAct61
 Status=-1
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=25
@@ -18709,7 +18709,7 @@ Name2=LightDance
 Name3=FatalWave
 ClientRepresent=1
 CoolDown=500
-SortOfAct=5
+SortOfAct5
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 IntoneEffect=fireball-Intone20
@@ -18875,7 +18875,7 @@ Name3=SkySword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct14
+SortOfAct=14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -20443,7 +20443,7 @@ Name2=LightDance
 Name3=FatalWave
 ActOfAttacker=928
 ClientRepresent=3
-SortOfAct=61
+SortOfAct61
 Status=-1
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=25
@@ -25643,7 +25643,7 @@ DescEx=Must~equip~a~pair~of~Fists~to~trigger~this~passive~skill.~While~making~a~
 Name=NormalATK(Dragonhowl)1
 ActOfAttacker=838
 ClientRepresent=3
-SortOfAct=4
+SortOfAct4
 Xp=9999
 TargetType=8
 TerrainEffect=zs_602838
@@ -25654,7 +25654,7 @@ SoundOfTarget=sound/zhanshi_putong_shuangqiang_2_1.wav
 Name=NormalATK(Dragonhowl)2
 ActOfAttacker=839
 ClientRepresent=3
-SortOfAct=4
+SortOfAct4
 Xp=9999
 TargetType=8
 TerrainEffect=zs_602839
@@ -25665,7 +25665,7 @@ SoundOfTarget=sound/zhanshi_putong_shuangqiang_2_1.wav
 Name=NormalATK(Dragonhowl)3
 ActOfAttacker=840
 ClientRepresent=3
-SortOfAct=4
+SortOfAct4
 Xp=9999
 TargetType=8
 TerrainEffect=zs_602840
@@ -25678,7 +25678,7 @@ ActOfAttacker=841
 ClientRepresent=3
 Xp=9999
 TargetType=2
-SortOfAct=4
+SortOfAct4
 WoundDelayOfTarget=200
 TerrainEffect=zs_602841
 SoundOfAttacker=sound/zhanshi_putong_shuangqiang_1_10.wav
@@ -26124,7 +26124,7 @@ Name=Ironbone
 ActOfAttacker=842
 ActOfTarget=923
 ClientRepresent=3
-SortOfAct=61
+SortOfAct61
 Status=-1
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=25
@@ -26190,7 +26190,7 @@ Hide=1
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct=14
+SortOfAct14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -26389,7 +26389,7 @@ Name3=EchoSword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct14
+SortOfAct=14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -30459,7 +30459,7 @@ ZoomNumVisable=0
 ServantID=700
 RandomMagicFlag=22040,22050,22060
 
-// ½Å±¾Í¬Ñ§Çë×¢Òâ£¬¸Ã¼¼ÄÜÐèÒªÀ©´óÊ©·¨·¶Î§£¬·ñÔòÖ»ÄÜ¶Ô×Ô¼ºµã»÷ÊÍ·Å
+//  ű ͬѧ  ע ⣬ ü     Ҫ    ʩ    Χ      ֻ ܶ  Լ     ͷ 
 [2164000]
 Name=CaptiveArrow
 ActOfAttacker=881
@@ -31140,7 +31140,7 @@ Name=ScentSword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct14
+SortOfAct=14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -31392,7 +31392,7 @@ SortOfAct5
 ServantID=1306
 SoundOfAttacker=sound\skill_jiequanshi_wuxlz_1.wav
 
-//~ÎåÐÇÁ¬Öé¼¼ÄÜµÄµÚÒ»´ÎÊÍ·Å±íÏÖ£¬ÎªÁËÅäÖÃ¶¯×÷
+//~       鼼 ܵĵ һ   ͷű  ֣ Ϊ     ö   
 [1002285000]
 Name=StarChain(Fire)
 Desc=
@@ -31403,7 +31403,7 @@ ActOfTarget=320
 TargetType=4
 SortOfAct5
 
-//~ÎåÐÇÁ¬ÖéÏÝÚåµÄºóÐøÉËº¦
+//~            ĺ    ˺ 
 [2002285000]
 Name=StarChain(Fire)
 Desc=
@@ -31489,7 +31489,7 @@ MultiHitInteravalTime=200
 HadStatus=-1
 MultiHitTimes=4
 ShowType=1
-//¾ßÌåÃ¿¶ÎÉËº¦°Ù·Ö±ÈÇëÎÊ²ß»®
+//    ÿ   ˺  ٷֱ    ʲ߻ 
 MultiHitPercentHit1=23
 MultiHitPercentHit2=24
 MultiHitPercentHit3=25
@@ -32162,8 +32162,8 @@ ActOfAttacker=721
 ClientRepresent=3
 SortOfAct14
 TargetType=4
-Desc=ÃèÊö
-DescEx=ÃèÊöEX
+Desc=    
+DescEx=    EX
 TerrainEffect=yuanshen_zs_skill2dj
 WoundDelayOfTarget=500
 isNewTip=1
@@ -32178,8 +32178,8 @@ ActOfAttacker=721
 ClientRepresent=3
 SortOfAct14
 TargetType=4
-Desc=ÃèÊö
-DescEx=ÃèÊöEX
+Desc=    
+DescEx=    EX
 TerrainEffect=yuanshen_zs_skill2gj
 WoundDelayOfTarget=500
 isNewTip=1
@@ -32210,8 +32210,8 @@ ActOfAttacker=401
 ClientRepresent=1
 SortOfAct1
 TargetType=4
-Desc=ÃèÊö
-DescEx=ÃèÊöEX
+Desc=    
+DescEx=    EX
 ZoomNumVisable=0
 isNewTip=1
 WoundNumType=32
@@ -32245,8 +32245,8 @@ ActOfAttacker=401
 ClientRepresent=1
 SortOfAct1
 TargetType=4
-Desc=ÃèÊö
-DescEx=ÃèÊöEX
+Desc=    
+DescEx=    EX
 ZoomNumVisable=0
 YuanShenMagicPro=10
 isNewTip=1
@@ -32260,7 +32260,7 @@ ClientRepresent=3
 TargetType=4
 Desc=Non-upgradable
 Hide=1
-DescEx=²âÊÔÃèÊö
+DescEx=        
 SoundOfTarget=sound\Health.wav
 YuanShenMagicPro=4
 NeedTurn=1
@@ -32273,8 +32273,8 @@ Name=Afterglow
 ClientRepresent=3
 TargetType=4
 SortOfAct60
-Desc=²âÊÔÃèÊö
-DescEx=²âÊÔÃèÊö
+Desc=        
+DescEx=        
 Role3DEffectOfTarget=yuanshen_gs_skill1sj
 SoundOfTarget=sound\Health.wav
 Role3DEffectOfAttaker=yuanshen_gs_skill1xh
@@ -32287,8 +32287,8 @@ Name=Afterglow
 ClientRepresent=3
 TargetType=4
 SortOfAct60
-Desc=²âÊÔÃèÊö
-DescEx=²âÊÔÃèÊö
+Desc=        
+DescEx=        
 Role3DEffectOfTarget=yuanshen_gs_skill1sj
 Role3DEffectOfAttaker=yuanshen_gs_skill1xh
 SoundOfTarget=sound\Health.wav
@@ -32301,8 +32301,8 @@ Name=Afterglow
 ClientRepresent=105
 TargetType=4
 SortOfAct60
-Desc=²âÊÔÃèÊö
-DescEx=²âÊÔÃèÊö
+Desc=        
+DescEx=        
 Role3DEffectOfTarget=yuanshen_gs_skill1sj
 Role3DEffectOfAttaker=yuanshen_gs_skill1xh
 SoundOfTarget=sound\Health.wav
@@ -32352,8 +32352,8 @@ WoundNumType=32
 
 [2477000]
 Name=Storm
-Desc=¼¼ÄÜÃèÊö
-DescEx=¾ßÌåÃèÊö
+Desc=        
+DescEx=        
 Hide=1
 YuanShenMagicPro=4
 isNewTip=1
@@ -32361,8 +32361,8 @@ TargetType=8
 
 [2480000]
 Name=DivineProtection
-Desc=¼¼ÄÜÃèÊö
-DescEx=¾ßÌåÃèÊö
+Desc=        
+DescEx=        
 Hide=1
 ActOfAttacker=320
 ClientRepresent=3
@@ -32374,8 +32374,8 @@ ZoomNumVisable=0
 
 [2470000]
 Name=SuperFlash
-Desc=ÃèÊö
-DescEx=ÃèÊöEX
+Desc=    
+DescEx=    EX
 TargetType=4
 isNewTip=1
 YuanShenMagicPro=4
@@ -32491,7 +32491,7 @@ Name=Survivor-ScentSword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct14
+SortOfAct=14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -33147,7 +33147,6 @@ DescEx=Rapidly~throws~multiple~throwing~knives~at~a~single~target,~dealing~380%%
 
 [2483000]
 Name=BenefitShower
-ActOfAttacker=251
 CanBeUsedInMarket=1
 ClientRepresent=1
 SortOfAct2
@@ -33250,7 +33249,7 @@ MultiHitTimes=4
 MultiHitInteravalTime=200
 HadStatus=-1
 ShowType=1
-//¾ßÌåÃ¿¶ÎÉËº¦°Ù·Ö±ÈÇëÎÊ²ß»®
+//    ÿ   ˺  ٷֱ    ʲ߻ 
 MultiHitPercentHit1=23
 MultiHitPercentHit2=24
 MultiHitPercentHit3=25
@@ -33286,7 +33285,6 @@ isNewTip=1
 
 [2481000]
 Name=CityRazing
-ActOfAttacker=251
 ClientRepresent=3
 TargetType=8
 Desc=xxx
@@ -33369,9 +33367,11 @@ Hide=1
 DescEx=Allows~immediate~revival~at~the~spot.~Cooldown:~300~sec.
 
 [2491000]
-Name=TwistedFuture
-TargetType=1
+Name=ApePistol
+ClientRepresent=1
+TargetType=4
 isNewTip=1
+ZoomNumVisable=0
 
 [2490000]
 Name=Disorder
@@ -33402,3 +33402,57 @@ DescEx=Allows~immediate~revival~at~the~spot.~Cooldown:~120~sec.
 [2494005]
 Desc=Non-upgradable
 DescEx=Allows~immediate~revival~at~the~spot.~Cooldown:~60~sec.
+
+[1002491000]
+Name=ApePistolDamage1
+ClientRepresent=3
+SortOfAct14
+TargetType=4
+ActOfAttacker=401
+ActOfTarget=320
+TerrainEffect=PirateJX_skill41
+
+[2002491000]
+Name=ApePistolDamage2
+ClientRepresent=3
+SortOfAct14
+TargetType=4
+ActOfAttacker=402
+ActOfTarget=320
+TerrainEffect=PirateJX_skill41
+
+[3002491000]
+Name=ApePistolDamage3
+ClientRepresent=3
+SortOfAct14
+TargetType=4
+ActOfAttacker=403
+ActOfTarget=320
+TerrainEffect=PirateJX_skill41
+
+[2505000]
+Name=Kemusan
+ActOfAttacker=25
+CanBeUsedInMarket=1
+ClientRepresent=1
+SortOfAct22
+TraceEffectOriginYOffset=100
+TraceEffectTargetYOffset=100
+TargetType=2
+Xp=3
+Desc=Upgradeable
+DescEx=You~can~perform~a~dance.
+IntoneEffect=born4
+SoundOfTarget=sound\Health.wav
+
+[2501000]
+Name=EternalWarsoul
+Desc=Upgradeable
+DescEx=You~can~perform~a~dance.
+TargetType=8
+isNewTip=1
+
+[2501001]
+Desc=Upgradeable
+DescEx=You~can~perform~a~dance.
+
