--- a/MagicEffect.ini
+++ b/MagicEffect.ini
@@ -69,7 +69,7 @@ Name4=Aspired-Thunderbolt
 ActOfAttacker=903
 ClientRepresent=1
 IntoneDuration=500
-SortOfAct=1
+SortOfAct1
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 Desc=Upgrade~after~Level~90
