--- a/MagicEffect.ini
+++ b/MagicEffect.ini
@@ -290,7 +290,7 @@ Name3=EchoSword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct=14
+sortofact14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -715,7 +715,7 @@ Name=FireRing
 ActOfAttacker=903
 ClientRepresent=2
 IntoneDuration=1500
-SortOfAct=1
+sortofact1
 TraceEffectOriginYOffset=80
 TraceEffectTargetYOffset=80
 Desc=Upgrade~after~lvl~55
@@ -770,7 +770,7 @@ Name=Bomb
 ActOfAttacker=903
 ClientRepresent=2
 IntoneDuration=2000
-SortOfAct=1
+sortofact1
 TraceEffectOriginYOffset=80
 TraceEffectTargetYOffset=80
 Desc=Upgrade~after~lvl~82
@@ -3316,7 +3316,7 @@ Role3DEffectOfTarget=yfly_atk9
 Name=Boom
 ActOfAttacker=401
 ClientRepresent=1
-SortOfAct=16
+sortofact16
 Status=11
 TraceEffectDelay=4
 TraceEffectOriginYOffset=10
@@ -18875,7 +18875,7 @@ Name3=SkySword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct=14
+sortofact14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -23876,7 +23876,7 @@ DescEx=There~is~a~100%~chance~to~gain~a~Hell~Vortex~effect~when~you`re~attacked,
 [1001637000]
 Name=HellVortex
 ClientRepresent=3
-SortOfAct=60
+sortofact60
 TargetType=8
 SkipJustActOfAttacker=1
 Role3DEffectOfAttaker=SLTZ_Strike
@@ -26389,7 +26389,7 @@ Name3=EchoSword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct=14
+sortofact14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -31140,7 +31140,7 @@ Name=ScentSword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct=14
+sortofact14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -32491,7 +32491,7 @@ Name=Survivor-ScentSword
 ActOfAttacker=401
 ClientRepresent=3
 CoolDown=500
-SortOfAct=14
+sortofact14
 TraceEffectOriginYOffset=100
 TraceEffectTargetYOffset=100
 TargetType=4
@@ -33455,3 +33455,4 @@ isNewTip=1
 [2501001]
 Desc=Upgradeable
 DescEx=You~can~perform~a~dance.
+
